feat: Add elevator pitch video section and nav link

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <a href="#projects">Projects</a>
       <a href="#skills">Skills</a>
       <a href="#courses">Courses</a>
+      <a href="#pitch">Pitch</a>
       <a href="#contact">Contact</a> </nav>
     <button id="darkModeToggle">
       Toggle Dark Mode
@@ -93,6 +94,20 @@
       </div>
 
     </div>
+  </section>
+  <section id="pitch">
+    <h2>Elevator Pitch</h2>
+    <p>Watch a brief video introduction about my background and goals.</p>
+    <div class="video-container">
+      <iframe
+        width="560" height="315"
+        src=""
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+      </div>
   </section>
   <section id="experience">
     <h2>Work Experience</h2>
