--- a/index.html
+++ b/index.html
@@ -99,14 +99,11 @@
     <h2>Elevator Pitch</h2>
     <p>Watch a brief video introduction about my background and goals.</p>
     <div class="video-container">
-      <iframe
-        width="560" height="315"
-        src=""
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen>
-      </iframe>
+      <video controls preload="metadata">
+        <source src="My-Elevator-Pitch.mp4" type="video/mp4">
+        Your browser does not support the video tag. Consider viewing this page in a modern browser, or
+        <a href="My-Elevator-Pitch.mp4" download>download the video</a>.
+      </video>
       </div>
   </section>
   <section id="experience">
