refactor: Embed pitch video from YouTube/Vimeo

--- a/index.html
+++ b/index.html
@@ -99,11 +99,9 @@
     <h2>Elevator Pitch</h2>
     <p>Watch a brief video introduction about my background and goals.</p>
     <div class="video-container">
-      <video controls preload="metadata">
-        <source src="My-Elevator-Pitch.mp4" type="video/mp4">
-        Your browser does not support the video tag. Consider viewing this page in a modern browser, or
-        <a href="My-Elevator-Pitch.mp4" download>download the video</a>.
-      </video>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Sgl4aAE0D_w?si=XafiTvU3lEiOhTLZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        
+      </iframe>
       </div>
   </section>
   <section id="experience">
