optimizing mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
       <a href="#skills">Skills</a>
       <a href="#courses">Courses</a>
       <a href="#pitch">Pitch</a>
-      <a href="#contact">Contact</a> </nav>
+      <a href="#contact">Contact</a>
+    </nav>
+    <button id="mobileNavToggle" class="mobile-nav-toggle" aria-label="Toggle navigation menu">
+      <i class="fas fa-bars" aria-hidden="true"></i>
+    </button>
     <button id="darkModeToggle">
       Toggle Dark Mode
     </button>
